@@ -419,3 +419,4 @@ Revision	Version Updated		Log Message
 481		C++			Slight updates to culture mappings
 482		C++			Update test batch files to use 7-Zip
 483		C++			More updates to the test batch files
+484		C++			Import parser improvements from CK2 To EU3
